--- a/osman-bio.html
+++ b/osman-bio.html
@@ -1,20 +1,12 @@
     <!DOCTYOE html>
     <html>
-        <ched>
-            <meta charset="utf-8">
-            <title>Abdi Osman</title><title>
         <head>
+            <meta charset="utf-8">
+            <title>Abdi Osman</title>
+        </head>
 
         <body>
         Currently majoring in Information Managment Technology(IMT). Things I like to do for fun are hanging out with my freinds, riding dirtbikes, and plying videogames. Im from Buffalo, NY I have a large family and currently a sophmore.
-        <body>
-
-    <html>
-
-    </html>
         </body>
-        </body>
-        </head>
-            </title></title>
-        </ched>
+  
     </html>
