--- a/osman-bio.html
+++ b/osman-bio.html
@@ -1,12 +1,25 @@
-    <!DOCTYOE html>
-    <html>
-        <head>
-            <meta charset="utf-8">
-            <title>Abdi Osman</title>
-        </head>
 
-        <body>
-        Currently majoring in Information Managment Technology(IMT). Things I like to do for fun are hanging out with my freinds, riding dirtbikes, and plying videogames. Im from Buffalo, NY I have a large family and currently a sophmore.
-        </body>
-  
-    </html>
+    <!DOCTYPE html>
+<html>
+    <head> 
+        <title> Abdi Osman Biography</title>
+    </head>
+
+    <h1> Abdi Osman Biography</h1>
+    <body>
+        <h2> Personal Info</h2>
+    </body>
+
+    <p1> Im from <strong> Buffalo, NY </strong> im currently a sophmore in the Ischool studying IMT. I like to drive dirtbikes for fun and hangout with my friends on the free time. I not really a social person however I can be, when you get to know me you would learn to appreciate my antics.</p1>
+    <ol>
+        <li>5th floor war general</li>
+        <li>likes to dance</li>
+        <li>like puzzles</li>
+        <li>eating is life</li>
+    </ol>
+    <hr> </hr>
+ 
+
+
+    &copy;2020
+</html>
