--- a/lab2/osman.bio.html
+++ b/lab2/osman.bio.html
@@ -8,7 +8,7 @@
         <h1> Abdi Osman Biography</h1>
         <h2> Personal Info</h2>
 
-        <p1> Im from <strong> Buffalo, NY </strong> im currently a sophmore in the Ischool studying IMT. I like to drive dirtbikes for fun and hangout with my friends on the free time. I not really a social person however I can be, when you get to know me you would learn to appreciate my antics.</p1>
+        <p> Im from <strong> Buffalo, NY </strong> im currently a sophmore in the Ischool studying IMT. I like to drive dirtbikes for fun and hangout with my friends on the free time. I not really a social person however I can be, when you get to know me you would learn to appreciate my antics.</p>
     <ol>
         <li>5th floor war general</li>
         <li>likes to dance</li>
